--- a/resources/assets/less/_custom.less
+++ b/resources/assets/less/_custom.less
@@ -45,6 +45,7 @@ pre {
     margin-block-start: 0;
     margin-block-end: 0;
     font-family: @font-family-base;
+    white-space: pre-wrap;
 }
 
 .sort-arrow {
